<resources>
    <string name="app_name">La Floria</string>
    <string name="valyuta">uzs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="settings">Settings</string>
    <string name="name_of_product">Name of product:</string>
    <string name="ammount_bouquet">Ammount:</string>
    <string name="type_bouquete">Type:</string>
    <string name="bouqete">Bouqete</string>
    <string name="romantic">Romantic</string>
    <string name="serviceies">Services</string>
    <string name="time_of_delivery">Time of delivery:</string>
    <string name="phone_number">Phone number:</string>
    <string name="seler_number">(seler number)</string>
    <string name="permision_dialog">This is permision for select product photo from gallery</string>
    <string name="permision_requred">Permission required</string>
    <string name="ok">Ok</string>
    <string name="islomov_sardor">Islomov Sardor</string>
    <string name="my_orders">My orders</string>
    <string name="products">Products</string>
    <string name="menusettings">Settings</string>
    <string name="admin_mode">Admin mode</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="please_wait">Please wait</string>
    <string name="loadingf">Loading...</string>
    <string name="sync_and_backup">SYNC AND BACKUP</string>
    <string name="firs_sign"><![CDATA[To synchronize data, you must log in with your Google Account. You can download from any device, anywhere. You can restore all the lost data! To restore the data, go to Settings-> Google Sync-> Download Database.]]></string>
    <string name="please_login_in">Please login in</string>
    <string name="connection">Connection...</string>
    <string name="online_mode">Online</string>
    <string name="connection_error">Connection Error</string>
    <string name="format_error">Format should be hh:mm</string>
    <string name="phone_format_error">Format should be official</string>
    <string name="name_product_error">Name of product must be greater than 3 smbols and less 15</string>
    <string name="ammount_format_incorect">Ammount format is invalidate</string>
    <string name="info_error">Information of product must be greater than 10 symbols and less 500, or just empty</string>
    <string name="info_obyasnawka">Info will help you for cell product better. If you want without info please tap ADD button one more</string>
    <string name="add_photo">Add photo your product</string>
    <string name="location_delivery">Location delivery</string>
</resources>
