<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_menu"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        />
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/accountPhoto"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="16dp"
        app:border_color="#d2d2d2"
        app:border_width="1dp"
        android:src="@drawable/no_photo"
        />
    <TextView
        android:id="@+id/nameAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_login_in"
        android:textStyle="bold"
        android:layout_below="@+id/accountPhoto"
        android:textColor="@color/glavniy_cherniy"
        android:textSize="16dp"
        android:layout_marginLeft="16dp"

        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/emailAdress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10dp"
        android:text=""
        android:layout_marginLeft="16dp"
        android:layout_below="@id/nameAccount"
        android:textColor="@color/greyNormSecondary"
        />
    <FrameLayout
        android:id="@+id/lineSubAccount"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_below="@+id/emailAdress"
        android:layout_marginTop="20dp"
        android:background="#d2d2d2"
        android:layout_marginRight="32dp"
        />
    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_below="@+id/lineSubAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/productList"

        android:orientation="horizontal">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/products"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:text="@string/products"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="#414141"
            android:textStyle="bold"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/myOrders"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/productList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/korzinka"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:text="@string/my_orders"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="#414141"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/adminMenu"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/myOrders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/admin_ic"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:text="@string/admin_mode"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="#414141"
            android:textStyle="bold"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/settings"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/adminMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/ic_settings_black_24dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:text="@string/menusettings"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="#414141"
            android:textStyle="bold"
            />
    </LinearLayout>
</RelativeLayout>