<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    android:id="@+id/mainAddingView"
       tools:context="com.iso.developer.lafloria.fragments.AddingProductFragment">
   <ScrollView
       android:id="@+id/customsv"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
            <RelativeLayout
                android:id="@+id/animateFor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">

               <ImageView
                   android:id="@+id/imageSelect"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:src="@drawable/ic_add_a_photo_black_48dp"
                   android:adjustViewBounds="true"
                   android:layout_centerInParent="true"
                   />
               <RelativeLayout
                   android:id="@+id/rlPriceView"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignBottom="@+id/imageSelect"
                   android:layout_marginBottom="40dp"
                   android:background="@drawable/gradient_price"
                   android:layout_alignParentRight="true"
                   android:paddingBottom="5dp"
                   android:paddingTop="5dp"
                   android:gravity="right"
                   android:paddingLeft="100dp"
                   android:layout_alignParentEnd="true"
                   >
                  <LinearLayout
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:gravity="right">
                     <TextView
                         android:id="@+id/priceProduct"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="0 uzs"
                         android:layout_marginRight="16dp"
                         android:textStyle="bold"
                         android:textSize="16dp"
                         android:textColor="@color/pureWhite"

                         />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="La Floria"
                         android:textSize="14dp"
                         android:layout_marginRight="16dp"
                         android:textColor="@color/pureWhite"
                         android:alpha="0.7"
                         android:id="@+id/textView" />
                  </LinearLayout>

               </RelativeLayout>
            </RelativeLayout>
            <FrameLayout
                android:layout_width="1px"
                android:layout_height="100dp"
                android:visibility="invisible"/>
         </LinearLayout>

         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerPhotoFilters"
             android:layout_width="match_parent"
             android:layout_height="130dp"
             android:paddingTop="5dp"
             android:background="#fafafa"
             android:paddingLeft="5dp"
             android:clipToPadding="false"
             android:visibility="gone"
             />
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="2px"
             android:background="#ececec"

             />
         <RadioGroup
             android:id="@+id/rgTypes"
            android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:checkedButton="@+id/rbBouqete"
             android:orientation="horizontal">

            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="16dp"
                android:layout_height="wrap_content"
                android:text="@string/bouqete"
                android:id="@+id/rbBouqete"
                />

            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/romantic"
                android:id="@+id/rbRomantic"/>
            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/serviceies"
                android:layout_marginRight="16dp"
                android:id="@+id/rbService"/>
         </RadioGroup>

         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="2px"

            android:background="#ececec"
             />


         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_of_product"
                android:textSize="16dp"
                android:textColor="@color/glavniy_cherniy"
                android:layout_marginLeft="17dp"
                android:gravity="center_vertical"
                android:id="@+id/tvproductName"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="17dp" />

         </RelativeLayout>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="16dp"
             android:layout_marginLeft="16dp"
             android:paddingLeft="7dp"
             android:paddingRight="7dp"
             android:paddingTop="5dp"
             android:maxLength="15"
             android:paddingBottom="5dp"
             android:textSize="18dp"
             android:background="@drawable/edit_text_shape"
             android:hint="(length 15symbols)"
             android:gravity="left"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="5dp"
             android:id="@+id/etNameProduct"
             android:textColorHint="#dfdfdf"
             />
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ammount_bouquet"
                android:textSize="16dp"
                android:textColor="@color/glavniy_cherniy"
                android:layout_marginLeft="16dp"
                android:gravity="center_vertical"
                android:id="@+id/tvAmmount" />


         </RelativeLayout>

         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="16dp"
             android:hint="(integer)"
             android:inputType="number"
             android:paddingLeft="7dp"
             android:textSize="18dp"
             android:paddingRight="7dp"
             android:paddingTop="5dp"
             android:maxLength="15"
             android:paddingBottom="5dp"
             android:background="@drawable/edit_text_shape"
             android:gravity="left"
             android:layout_marginLeft="16dp"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="5dp"
             android:id="@+id/etAmmount"
             android:textColorHint="#dfdfdf"

             />

         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_of_delivery"
                android:textSize="16dp"
                android:textColor="@color/glavniy_cherniy"
                android:layout_marginLeft="16dp"
                android:gravity="center_vertical"
                android:id="@+id/tvTimePick" />


         </RelativeLayout>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="16dp"
             android:hint="(hh:mm)"
             android:layout_marginTop="5dp"
             android:inputType="time"
             android:gravity="left"
             android:paddingLeft="7dp"
             android:textSize="18dp"
             android:paddingRight="7dp"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             android:background="@drawable/edit_text_shape"
             android:layout_marginLeft="16dp"
             android:id="@+id/tpTimerPickerDeleivry"
             android:textColorHint="#dfdfdf"

             />

         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_delivery"
                android:textSize="16dp"
                android:textColor="@color/glavniy_cherniy"
                android:layout_marginLeft="16dp"
                android:gravity="center_vertical"
                />


         </RelativeLayout>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="16dp"
             android:hint="(hh:mm)"
             android:layout_marginTop="5dp"
             android:inputType="time"
             android:gravity="left"
             android:paddingLeft="7dp"
             android:paddingRight="7dp"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             android:background="@drawable/edit_text_shape"
             android:layout_marginLeft="16dp"
             android:textColorHint="#dfdfdf"

             >
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spCountry"
                />
         </RelativeLayout>

         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:layout_marginTop="15dp"
                android:textSize="16dp"
                android:textColor="@color/glavniy_cherniy"
                android:layout_marginLeft="16dp"
                android:gravity="center_vertical"
                android:id="@+id/tvTelNomer" />

         </RelativeLayout>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="16dp"
             android:inputType="phone"
             android:gravity="left"
             android:textSize="18dp"
             android:textColorHint="#dfdfdf"
             android:hint="@string/seler_number"
             android:layout_marginBottom="20dp"
             android:layout_marginTop="5dp"
             android:id="@+id/etPhoneNumber"
             android:paddingLeft="7dp"
             android:paddingRight="7dp"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             android:background="@drawable/edit_text_shape"
             android:layout_marginLeft="16dp"
             />
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="2px"
             android:background="#ececec"
             android:layout_marginBottom="10dp"
             />
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="15dp"
             >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_bouquete"
                android:textSize="16dp"
                android:textColor="@color/glavniy_cherniy"
                android:layout_marginLeft="16dp"
                android:gravity="center_vertical"
                android:layout_alignBottom="@+id/spTypeOfAdding"
                android:layout_alignTop="@+id/spTypeOfAdding"
                android:id="@+id/tvTypeChoose" />
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="16dp"

                android:gravity="right"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/spTypeOfAdding"
                />
         </RelativeLayout>

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="16dp"
             android:text="Info:"
             android:layout_marginBottom="5dp"
             android:textColor="@color/glavniy_cherniy"
             android:layout_marginLeft="16dp"
             />
         <EditText
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:background="@drawable/edit_text_shape"
             android:gravity="start"
             android:padding="5dp"
             android:textSize="18dp"
             android:maxLength="500"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="2dp"
             android:layout_marginBottom="16dp"
             android:id="@+id/etInfoProduct"
             />
         <FrameLayout
             android:id="@+id/buttonSave"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
             android:layout_gravity="center"
             android:background="@color/colorAccent"
             >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Add"
                android:textSize="20dp"
                android:textColor="@color/pureWhite"/>
         </FrameLayout>
      </LinearLayout>
   </ScrollView>


</LinearLayout>
